--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Mehmood</title>
+    <title>MK</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -74,7 +74,7 @@
                     <a href="https://github.com/awaiskhalid"><i class="fa fa-github"></i></a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/Awaismk"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/mkay_tweets"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li>
                     <a href="https://linkedin.com/in/mehmood2" target="_blank"><i class="fa fa-linkedin"></i></a>
@@ -844,14 +844,14 @@
             <div class="col-twelve tab-full social">
                 <ul class="footer-social">
                     <li><a href="https://github.com/awaiskhalid">Github</a></li>
-                    <li><a href="https://twitter.com/Awaismk">Twitter</a></li>
+                    <li><a href="https://twitter.com/mkay_tweets">Twitter</a></li>
                     <li><a href="https://linkedin.com/in/mehmood2">LinkedIn</a></li>
                 </ul>
             </div>
 
             <div class="col-twelve tab-full">
                 <div class="copyright">
-                    <span>© Copyright 2017.</span>
+                    <span>© Copyright 2019.</span>
                 </div>
             </div>
 
