--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
                     </li>
                     <li class="animate-this" data-animate="fadeInRight">
                         <div class="progress percent85"><span>85%</span></div>
-                        <strong>MySql Databases & Solr Indexing</strong>
+                        <strong>Sql Databases & Solr Indexing</strong>
                     </li>
                     <li class="animate-this" data-animate="fadeInRight">
                         <div class="progress percent75"><span>75%</span></div>
-                        <strong>Wordpress & Drupal</strong>
+                        <strong>Wordpress,Drupal,Laravel,Ruby on Rails</strong>
                     </li>
 
                 </ul>
@@ -843,15 +843,15 @@
 
             <div class="col-twelve tab-full social">
                 <ul class="footer-social">
-                    <li><a href="https://github.com/awaiskhalid">Github</a></li>
+                    <li><a href="https://github.com/mk_ctrl">Github</a></li>
                     <li><a href="https://twitter.com/mkay_tweets">Twitter</a></li>
-                    <li><a href="https://linkedin.com/in/mehmood2">LinkedIn</a></li>
+                    <li><a href="https://linkedin.com/in/mk-ctrl">LinkedIn</a></li>
                 </ul>
             </div>
 
             <div class="col-twelve tab-full">
                 <div class="copyright">
-                    <span>© Copyright 2019.</span>
+                    <span>© Copyright 2020.</span>
                 </div>
             </div>
 
