fixed some social links

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 
             <ul class="header-social-list">
                 <li>
-                    <a href="https://github.com/awaiskhalid"><i class="fa fa-github"></i></a>
+                    <a href="https://github.com/mk-ctrl"><i class="fa fa-github"></i></a>
                 </li>
                 <li>
                     <a href="https://twitter.com/mkay_tweets"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li>
-                    <a href="https://linkedin.com/in/mehmood2" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://linkedin.com/in/mk-ctrl" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </li>
             </ul>
 
