updated a link for https

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- favicons
 	================================================== -->
-    <link rel="shortcut icon" href="http://res.cloudinary.com/mehmood/image/upload/s--hR2r2Nj9--/v1504912357/favicon_cmblcw.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/mehmood/image/upload/s--hR2r2Nj9--/v1504912357/favicon_cmblcw.ico" type="image/x-icon">
     <link rel="icon" href="http://res.cloudinary.com/mehmood/image/upload/s--hR2r2Nj9--/v1504912357/favicon_cmblcw.ico" type="image/x-icon">
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
