--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!-- end home-content-tablecell -->
         </div>
         <!-- end home-content-table -->
-
+mk-ctrl/mkhalid
         <a href="#about" class="scroll-icon smoothscroll">
             <span class="icon-DownArrow"></span>
         </a>
@@ -171,7 +171,7 @@
                 <p class="animate-this">
                     I'm well versed in many skills around technology & product development. I like to build things – usually with technology, and a side of grit. I love knowledge, and I strongly believe technology can, and should enrich every single life this universe has
                     to offer.
-                </p>
+               mk-ctrl/mkhalid </p>
 
                 <p class="animate-this">
                     I am currently working in Montreal and I am always available to discuss your project over the phone or via Skype. I look forward to speaking with you soon about your unique project, be it anything web programming.
@@ -800,7 +800,7 @@
                 <h5 class="animate-this">Where to find me</h5>
 
                 <p class="animate-this">
-                    87e Avenue<br> Laval, QC<br> H7W CA
+                    57e AV<br> Laval, QC<br> H7R CA
                 </p>
             </div>
             <!-- end col-four -->
@@ -861,7 +861,7 @@
 
             <div class="col-twelve tab-full">
                 <div class="copyright">
-                    <span>© Copyright 2020.</span>
+                    <span>© Copyright 2021.</span>
                 </div>
             </div>
 
