New form endpoint

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ mk-ctrl/mkhalid
             <div class="col-twelve">
 
                 <!-- form -->
-                <form name="contactForm" id="contactForm" method="post">
+                <form name="contactForm" id="contactForm" method="post" action="https://usebasin.com/f/c18ad4f38d4d">
 
 
                     <div class="form-field animate-this">
