fixed some issues with the date

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ mk-ctrl/mkhalid
 
             <div class="col-twelve tab-full social">
                 <ul class="footer-social">
-                    <li><a href="https://github.com/mk_ctrl">Github</a></li>
+                    <li><a href="https://github.com/mk-ctrl">Github</a></li>
                     <li><a href="https://twitter.com/mkay_tweets">Twitter</a></li>
                     <li><a href="https://linkedin.com/in/mk-ctrl">LinkedIn</a></li>
                 </ul>
@@ -861,7 +861,7 @@ mk-ctrl/mkhalid
 
             <div class="col-twelve tab-full">
                 <div class="copyright">
-                    <span>© Copyright 2021.</span>
+                    <span>© Copyright &copy; <script>document.write(new Date().getFullYear())</script></span>
                 </div>
             </div>
 
