fixed some issues with the date

--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ mk-ctrl/mkhalid
 
             <div class="col-twelve tab-full">
                 <div class="copyright">
-                    <span>© Copyright &copy; <script>document.write(new Date().getFullYear())</script></span>
+                    <span>Copyright &copy; <script>document.write(new Date().getFullYear())</script></span>
                 </div>
             </div>
 
