Updated with new img formats

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ mk-ctrl/mkhalid
                     <div class="brick folio-item">
                         <div class="item-wrap animate-this" data-src="images/portfolio/gallery/book.png" data-sub-html="#01">
                             <a href="#" class="overlay">
-                                <img src="images/portfolio/book.png" alt="A Book">
+                                <img src="https://res.cloudinary.com/mehmood/image/upload/s--giowxgwR--/q_auto:best/v1669756717/mkhalid/book_vzilrt.webp" alt="A Book">
                                 <div class="item-text">
                                     <span class="folio-types">
 		     					      Web Development
@@ -513,7 +513,7 @@ mk-ctrl/mkhalid
                     <div class="brick folio-item">
                         <div class="item-wrap animate-this" data-src="images/portfolio/gallery/social.png" data-sub-html="#02">
                             <a href="#" class="overlay">
-                                <img src="images/portfolio/social.png" alt="Social">
+                                <img src="https://res.cloudinary.com/mehmood/image/upload/s--KV5Hvlrz--/q_auto:best/v1669756743/mkhalid/social_ydl82x.webp" alt="Social">
                                 <div class="item-text">
                                     <span class="folio-types">
 		     					      Social Netwrok
@@ -537,7 +537,7 @@ mk-ctrl/mkhalid
                     <div class="brick folio-item">
                         <div class="item-wrap animate-this" data-src="images/portfolio/gallery/id-site.png" data-sub-html="#03">
                             <a href="#" class="overlay">
-                                <img src="images/portfolio/id-site.png" alt="ID Theft">
+                                <img src="https://res.cloudinary.com/mehmood/image/upload/s--R9EiFvZA--/q_97/v1669756781/mkhalid/id-site_fe4xy3.webp" alt="ID Theft">
                                 <div class="item-text">
                                     <span class="folio-types">
 		     					      Web Development
@@ -561,7 +561,7 @@ mk-ctrl/mkhalid
                     <div class="brick folio-item">
                         <div class="item-wrap animate-this" data-src="images/portfolio/gallery/saas-sales-website.png" data-sub-html="#04">
                             <a href="#" class="overlay">
-                                <img src="images/portfolio/saas-sales-website.png" alt="design">
+                                <img src="https://res.cloudinary.com/mehmood/image/upload/s--FJUYGDlF--/q_99/v1669756801/mkhalid/saas-sales-website_mwf2ho.webp" alt="design">
                                 <div class="item-text">
                                     <span class="folio-types">
 		     					      Web Design
@@ -585,7 +585,7 @@ mk-ctrl/mkhalid
                     <div class="brick folio-item">
                         <div class="item-wrap animate-this" data-src="images/portfolio/gallery/service-site-3.png" data-sub-html="#05">
                             <a href="#" class="overlay">
-                                <img src="images/portfolio/service-site-3.png" alt="Site">
+                                <img src="https://res.cloudinary.com/mehmood/image/upload/s--JmaGyvEV--/q_100/v1669756821/mkhalid/service-site-3_h3idne.webp" alt="Site">
                                 <div class="item-text">
                                     <span class="folio-types">
 		     					      Branding
@@ -609,7 +609,7 @@ mk-ctrl/mkhalid
                     <div class="brick folio-item">
                         <div class="item-wrap animate-this" data-src="images/portfolio/gallery/email.png" data-sub-html="#06">
                             <a href="#" class="overlay">
-                                <img src="images/portfolio/email.png" alt="Email">
+                                <img src="https://res.cloudinary.com/mehmood/image/upload/s--Ew9TFuDi--/q_100/v1669756842/mkhalid/email_ojtk44.webp" alt="Email">
                                 <div class="item-text">
                                     <span class="folio-types">
 		     					      Design
@@ -632,7 +632,7 @@ mk-ctrl/mkhalid
                     <div class="brick folio-item">
                         <div class="item-wrap animate-this" data-src="images/portfolio/gallery/career.png" data-sub-html="#07">
                             <a href="#" class="overlay">
-                                <img src="images/portfolio/career.png" alt="Email">
+                                <img src="https://res.cloudinary.com/mehmood/image/upload/s--osv3xSLm--/q_100/v1669756860/mkhalid/career_ptyo8f.webp" alt="Email">
                                 <div class="item-text">
                                     <span class="folio-types">
 		     					      Branding
