--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   	function gtag(){dataLayer.push(arguments);}
   	gtag('js', new Date());
 
-  	gtag('config', 'UA-180187771-1');
+  	gtag('config', '351540552');
 </script>
 
 
