--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="icon" href="http://res.cloudinary.com/mehmood/image/upload/s--hR2r2Nj9--/v1504912357/favicon_cmblcw.ico" type="image/x-icon">
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180187771-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=351540552"></script>
     <script>
 	window.dataLayer = window.dataLayer || [];
   	function gtag(){dataLayer.push(arguments);}
