--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 
             <ul class="header-social-list">
                 <li>
-                    <a href="https://github.com/mk-ctrl"><i class="fa fa-github"></i></a>
+                    <a href="https://github.com/mktheitguy" target="_blank"><i class="fa fa-github"></i></a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/mkay_tweets"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/mktheitguy" target="_blank"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li>
-                    <a href="https://linkedin.com/in/mk-ctrl" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://linkedin.com/in/mktheitguy" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </li>
             </ul>
 
@@ -114,7 +114,7 @@
 
                             <h3 class="animate-intro">Hello, World.</h3>
                             <h1 class="animate-intro">
-                                I am Mehmood Khalid. <br> Web Developer <br> Based in Laval, Canada.
+                                I am Mehmood Khalid. <br> Web Developer <br> Based in Montreal, Canada.
                             </h1>
 
                             <ul class="home-section-links">
@@ -273,31 +273,19 @@ mk-ctrl/mkhalid
 
                 <ul class="skill-bars">
                     <li class="animate-this" data-animate="fadeInRight">
-                        <div class="progress percent90"><span>85%</span></div>
-                        <strong>HTML5/CSS3</strong>
-                    </li>
-                    <li class="animate-this" data-animate="fadeInRight">
                         <div class="progress percent85"><span>90%</span></div>
-                        <strong>BootStrap/jQuery</strong>
+                        <strong>FullStack Web Development</strong>
                     </li>
                     <li class="animate-this" data-animate="fadeInRight">
-                        <div class="progress percent90"><span>80%</span></div>
-                        <strong>Javascript</strong>
+                        <div class="progress percent75"><span>85%</span></div>
+                        <strong>PHP, Ruby, Python, JS, SQL</strong>
                     </li>
                     <li class="animate-this" data-animate="fadeInRight">
-                        <div class="progress percent70"><span>70%</span></div>
-                        <strong>Python</strong>
-                    </li>
-                    <li class="animate-this" data-animate="fadeInRight">
-                        <div class="progress percent75"><span>75%</span></div>
-                        <strong>PHP</strong>
-                    </li>
-                    <li class="animate-this" data-animate="fadeInRight">
-                        <div class="progress percent85"><span>85%</span></div>
+                        <div class="progress percent85"><span>80%</span></div>
                         <strong>Sql Databases & Solr Indexing</strong>
                     </li>
                     <li class="animate-this" data-animate="fadeInRight">
-                        <div class="progress percent75"><span>75%</span></div>
+                        <div class="progress percent75"><span>95%</span></div>
                         <strong>Wordpress,Drupal,Laravel,Ruby on Rails</strong>
                     </li>
 
@@ -853,9 +841,9 @@ mk-ctrl/mkhalid
 
             <div class="col-twelve tab-full social">
                 <ul class="footer-social">
-                    <li><a href="https://github.com/mk-ctrl">Github</a></li>
-                    <li><a href="https://twitter.com/mkay_tweets">Twitter</a></li>
-                    <li><a href="https://linkedin.com/in/mk-ctrl">LinkedIn</a></li>
+                    <li><a href="https://github.com/mktheitguy">Github</a></li>
+                    <li><a href="https://twitter.com/mktheitguy">Twitter</a></li>
+                    <li><a href="https://linkedin.com/in/mktheitguy">LinkedIn</a></li>
                 </ul>
             </div>
 
