Addng some more modifications

--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
 
   	gtag('config', 'G-M60SFKZ2D7');
 </script>
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Mehmood Khalid",
+      "jobTitle": "Full-Stack Web Developer",
+      "url": "https://mkhalid.ca",
+      "sameAs": [
+        "https://github.com/mktheitguy",
+        "https://linkedin.com/in/mktheitguy"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Montreal",
+        "addressRegion": "QC",
+        "addressCountry": "CA"
+      }
+    }
+    </script>
 
 
 </head>
@@ -579,7 +598,8 @@
                 <h5 class="animate-this">Email Me At</h5>
 
                 <p class="animate-this">
-                   info@mkhalid.ca
+                    📩 Preferred Contact <br>
+                   <a href="mailto:info@mkhalid.ca">info@mkhalid.ca</a>
                 </p>
             </div>
             <!-- end col-four -->
